Fix: Improve performance of blurred elements

--- a/src/app.css
+++ b/src/app.css
@@ -106,6 +106,17 @@
 		grid-row: 1;
 		grid-column: 1;
 	}
+
+	* {
+		-webkit-backface-visibility: hidden;
+		-webkit-perspective: 1000;
+		-webkit-transform: translate3d(0,0,0);
+		-webkit-transform: translateZ(0);
+		backface-visibility: hidden;
+		perspective: 1000;
+		transform: translate3d(0,0,0);
+		transform: translateZ(0);
+	}
 }
 
 @layer components {
